# lista7-dawidmuszynski1

./: .gitignore  AGGLOMERATIVE.ipynb  EDA.ipynb  KMEANS.ipynb  UM_inz_L7_tutorial.ipynb  pyproject.toml
